// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` undefined|null|void type 1`] = `
"/** @returns {undefined} */
"
`;

exports[` undefined|null|void type 2`] = `
"/** @returns {null} */
"
`;

exports[` undefined|null|void type 3`] = `
"/** @returns {void} */
"
`;

exports[`@file 1`] = `
"/** @file A file description */
"
`;

exports[`Bad defined name 1`] = `
"/** @type {import("@jest/types/build/Config").InitialOptions} */
/** @type {{ foo: string }} */

/**
 * @typedef {import("@jest/types/build/Config").InitialOptions} name A
 *   description
 */
"
`;

exports[`Big single word 1`] = `
"/**
 * Simple Single Word
 * https://github.com/babel/babel/pull/7934/files#diff-a739835084910b0ee3ea649df5a4d223R67
 */
"
`;

exports[`Block quote 1`] = `
"/** > A block quote */
"
`;

exports[`Block quote 2`] = `
"/**
 * > \`\`\`js
 * > > A block quote
 * > \`\`\`
 *
 * > Turns into
 *
 * > \`\`\`js
 * > A block quote
 * > \`\`\`
 *
 * Sdssasdassd
 */
"
`;

exports[`Empty comment 1`] = `
"// Line Comment
//
"
`;

exports[`File with just an import 1`] = `
"import { something } from "./index";
"
`;

exports[`Format rest parameters properly 1`] = `
"/**
 * @param {...any} arg1
 * @param {...number} arg2
 * @param {...(string | number)} arg3
 * @param {...(string | number)} arg4 This is equivalent to arg3
 */
function a() {}
"
`;

exports[`Hyphen at the start of description 1`] = `
"/**
 * Assign the project to an employee.
 *
 * @param {Object} employee - The employee who is responsible for the project.
 * @param {string} employee.name - The name of the employee.
 * @param {string} employee.department - The employee's department.
 */
"
`;

exports[`Incorrect comment 1`] = `
"/** Some comment */
export class Dummy {}
"
`;

exports[`Incorrect comment 2`] = `
"export class Dummy {}
"
`;

exports[`JS code should be formatted as usuall 1`] = `
"const variable1 = 1; // No semicolon
const stringVar = "text"; // Wrong quotes
const indented = 2; // Wrong indentation

// Longer then 80 characters
const someLongList = [
  "private",
  "memberof",
  "description",
  "example",
  "param",
  "returns",
  "link",
];
"
`;

exports[`Long description memory leak 1`] = `
"/**
 * Configures custom logging for the {@link @microsoft/signalr.HubConnection}.
 *
 * https://example.com
 *
 * @param {LogLevel | string | ILogger} logging A
 *   {@link @microsoft/signalr.LogLevel}, a string representing a LogLevel, or
 *   an object implementing the {@link @microsoft/signalr.ILogger} interface.
 *   See
 *   {@link https://docs.microsoft.com/aspnet/core/signalr/configuration#configure-logging|the documentation for client logging configuration}
 *   for more details.
 * @returns The {@link @microsoft/signalr.HubConnectionBuilder} instance, for
 *   chaining.
 */
"
`;

exports[`Non-jsdoc comment 1`] = `
"// @type   { something  }
/* @type   { something  }  */
/* /** @type   { something  }  */
"
`;

exports[`Optional parameters 1`] = `
"/**
 * @param {number} [arg1]
 * @param {number} [arg2]
 * @param {number} [arg3=4] Default is \`4\`
 */
"
`;

exports[`Optional params 1`] = `
"/**
 * @param {string} [p2] - An optional param (Google Closure syntax)
 * @param {string} [p3] - Another optional param (JSDoc syntax).
 * @returns {string | undefined}
 */
"
`;

exports[`Should align vertically param|property|returns|yields|throws if option set to true, and amount of spaces is different than default 1`] = `
"/**
 * @property  {Object}          unalginedProp   Unaligned property descriptin
 * @param     {String}          unalginedParam  Unaligned param description
 * @yields    {Number}                          Yields description
 * @returns   {undefined}
 * @throws    {CustomExceptio}                  Unaligned throws description
 */
"
`;

exports[`Should align vertically param|property|returns|yields|throws if option set to true, and amount of spaces is different than default 2`] = `
"/**
 * @property    {Object}            unalginedProp     Unaligned property
 *   descriptin
 * @param       {String}            unalginedParam    Unaligned param
 *   description
 * @yields      {Number}                              Yields description
 * @returns     {String}                              Unaligned returns
 *   description
 * @throws      {CustomExceptio}                      Unaligned throws
 *   description
 */
"
`;

exports[`Should convert to single line if necessary 1`] = `
"/** Single line description */
"
`;

exports[`Should convert to single line if necessary 2`] = `
"/** Single line description */
"
`;

exports[`Should convert to single line if necessary 3`] = `
"/**
 * Single line description
 *
 * @returns {Boolean} Always true
 */
"
`;

exports[`Should convert to single multiLine 1`] = `
"/**
 * Single line description
 */
"
`;

exports[`Should convert to single multiLine 2`] = `
"/**
 * Single line description
 */
"
`;

exports[`Should convert to single multiLine 3`] = `
"/**
 * Single line description
 *
 * @returns {Boolean} Always true
 */
"
`;

exports[`Should format jsDoc default values 1`] = `
"/**
 * @param {String} [arg1="defaultTest"] Foo. Default is \`"defaultTest"\`
 * @param {number} [arg2=123] The width of the rectangle. Default is \`123\`
 * @param {number} [arg3=123] Default is \`123\`
 * @param {number} [arg4=Foo.bar.baz] Default is \`Foo.bar.baz\`
 * @param {number | string} [arg5=123] Something. Default is \`123\`
 */
"
`;

exports[`Should format jsDoc default values 2`] = `
"/**
 * @param {String} [arg1="defaultTest"] Foo. Default is \`"defaultTest"\`
 * @param {number} [arg2=123] The width of the rectangle. Default is \`123\`
 * @param {number} [arg3=123] Default is \`123\`
 * @param {number} [arg4=Foo.bar.baz] Default is \`Foo.bar.baz\`
 * @param {number | string} [arg5=123] Something. Default is \`123\`
 */
"
`;

exports[`Should format jsDoc default values 3`] = `
"/**
 * @param {String} [arg1="defaultTest"] Foo
 * @param {number} [arg2=123] The width of the rectangle
 * @param {number} [arg3=123]
 * @param {number} [arg4=Foo.bar.baz]
 * @param {number | string} [arg5=123] Something. Default is \`"wrong"\`
 */
"
`;

exports[`Should format regular jsDoc 1`] = `
"/**
 * Function example description that was wrapped by hand so it have more then
 * one line and don't end with a dot REPEATED TWO TIMES BECAUSE IT WAS EASIER to
 * copy function example description that was wrapped by hand so it have more
 * then one line.
 *
 * @async
 * @private
 * @memberof test
 * @example
 *   var one = 5;
 *   var two = 10;
 *
 *   if (one > 2) {
 *     two += one;
 *   }
 *
 * @param {String | Number} text - Some text description that is very long and
 *   needs to be wrapped
 * @param {String} [defaultValue="defaultTest"] TODO. Default is \`"defaultTest"\`
 * @param {Number | Null} [optionalNumber]
 * @returns {Boolean} Description for @returns with s
 * @undefiendTag
 * @undefiendTag {number} name des
 */
const testFunction = (text, defaultValue, optionalNumber) => true;
"
`;

exports[`Should format regular jsDoc 2`] = `
"/**
 * Function example description that was wrapped by hand so it have more then
 * one line and don't end with a dot REPEATED TWO TIMES BECAUSE IT WAS EASIER to
 * copy function example description that was wrapped by hand so it have more
 * then one line.
 *
 * @async
 * @private
 * @memberof test
 * @example
 *   var one = 5;
 *   var two = 10;
 *
 *   if (one > 2) {
 *     two += one;
 *   }
 *
 * @param {String | Number} text - Some text description that is very long and
 *   needs to be wrapped
 * @param {String} [defaultValue="defaultTest"] TODO. Default is \`"defaultTest"\`
 * @param {Number | Null} [optionalNumber]
 * @returns {Boolean} Description for @returns with s
 * @undefiendTag
 * @undefiendTag {number} name des
 */
const testFunction = (text, defaultValue, optionalNumber) => true;
"
`;

exports[`Should insert proper amount of spaces based on option 1`] = `
"/**
 * @param  {Object}  paramName  Param description that goes on and on and on
 *   utill it will need to be wrapped
 * @returns  {Number}  Return description
 */
"
`;

exports[`Should insert proper amount of spaces based on option 2`] = `
"/**
 * @param   {Object}   paramName   Param description that goes on and on and on
 *   utill it will need to be wrapped
 * @returns   {Number}   Return description
 */
"
`;

exports[`Should keep defined inner types 1`] = `
"/** @param {String[]} test Test param */
"
`;

exports[`Should keep defined inner types 2`] = `
"/** @param {String[]} test Test param */
"
`;

exports[`Should keep defined inner types 3`] = `
"/** @param {(String | Object)[]} test Test param */
"
`;

exports[`Should keep defined inner types 4`] = `
"/** @returns {Promise<Number | String | undefined>} Test promise */
"
`;

exports[`Should keep defined inner types 5`] = `
"/** @returns {Object<Number | String | undefined>} Test object */
"
`;

exports[`Sould keep complex inner types 1`] = `
"/**
 * @param {(String | Number)[]} test Test param
 * @param {Object<String, Number>[]} test Test param
 * @param {...Number} test Test param
 * @param {Number | null} test Test param
 * @param {undefined | null} test Test param
 * @param {!Number} test Test param
 * @param {Number} test Test param
 * @param {Number | String} test Test param
 * @param {undefined} test Test param
 * @param {any} test Test param
 * @todo Todo is no param
 */
"
`;

exports[`Sould keep complex inner types 2`] = `
"/** @returns {Promise<Object<string, number | undefined>>} Test return */
"
`;

exports[`Sould keep params ordering when more than 10 tags are present 1`] = `
"/**
 * Description
 *
 * @param {Number} test1 Test param
 * @param {Number} test2 Test param
 * @param {Number | String} test3 Test param
 * @param {undefined | null} test4 Test param
 * @param {!undefined} test5 Test param
 * @param {any} test6 Test param
 * @param {"*"} test6 Test param
 * @param {Number | null} test7 Test param
 * @param {...Number} test8 Test param
 * @param {!Number} test9 Test param
 * @param {String} test10 Test param
 * @param {Array} test11 Test param
 * @returns {Promise<Object<string, number | undefined>>} Test return
 */
"
`;

exports[`default type parameter  1`] = `
"/**
 * @template [BAR=({bar:true}&{foo:false}&{buggy:true})] Default is
 *   \`({bar:true}&{foo:false}&{buggy:true})\`
 * @typedef {{ foo: BAR }} SomeType
 */
"
`;

exports[`example  1`] = `
"/**
 * ABCCCC
 *
 * @example <caption>DDDD</caption>
 *   const MyHook = () => {
 *   const config useConfig(state => state.config)
 *   return <span></span>
 *   }
 *
 *   const useMyHook = () => {
 *   const config useConfig(state => state.config)
 *   return config
 *   }
 *
 * @example <caption>AAAA</caption>
 *   const config = useConfig.getState().config;
 */
"
`;

exports[`example with tab intention 1`] = `
"/**
 * @example
 * 	function Hello() {
 * 		console.log("Hello World");
 * 	}
 */
"
`;

exports[`jsdoc tags 1`] = `
"/**
 * @namespace
 * @borrows trstr as trim
 */

/**
 * Whether the type should be non null, \`required: true\` = \`nullable: false\`
 *
 * @default (depends on whether nullability is configured in type or schema)
 * @see declarativeWrappingPlugin
 */
"
`;

exports[`jsdoc tags 2`] = `
"/** @default "i am a value" i am the description */
"
`;

exports[`non-escapable character 1`] = `
"/**
 * \\
 *
 * \\-
 */
"
`;

exports[`non-escapable character 2`] = `
"/** \\ */
"
`;

exports[`param order 1`] = `
"/**
 * @param {string} param0 Description
 * @param {object} param1 Description
 * @param {number} param2 Description
 */
function fun(param0, param1, param2) {}

export const SubDomain = {
  /**
   * @param subDomainAddress2
   * @param {any} subDomainAddress
   * @returns {import("axios").AxiosResponse<import("../types").SubDomain>}
   */
  async subDomain(subDomainAddress2, subDomainAddress) {},
};

/**
 * @param {string} param0 Description
 * @param {object} param1 Description
 * @param {number} param2 Description
 */
const fun = (param0, param1, param2) => {
  console.log("");
};
"
`;

exports[`param order 2`] = `
"/**
 * @param {string} a      - A for foo.
 * @param {object} c      - Options.
 * @param {object} opts   - Options.
 * @param {string} opts.b - Option b.
 * @param {string} v      - Option b.
 * @param {string} opt2   - Option b.
 */
const foo = (a, c, { b }, v, opt2) => {
  console.log(a, v, c, b);
};
foo("a", { b: "b" });
"
`;

exports[`param order 3`] = `
"/**
 * @param {string} param0 Description
 * @param {number} param2 Description
 * @param {object} param1 Description
 */
const fun = (param0: () => {}, param1: number, param2) => {
  console.log("");
};

/**
 * @param {string} param0 Description
 * @param {object} param1 Description
 * @param {number} param2 Description
 */
function fun(param0: string, param1: {}, param2: () => {}) {}
"
`;

exports[`satisfies 1`] = `
"/**
 * Bounce give a renderContent and show that around children when isVisible is
 * true
 *
 * @example
 *   <Bounce
 *     isVisible={isVisible}
 *     dismiss={() => setVisible(false)}
 *     renderContent={() => {
 *       return <InsideOfPopeUp />;
 *     }}
 *   >
 *     <Button />
 *   </Bounce>;
 *
 * @type {React.FC<BounceProps>}
 * @satisfies {React.FC<BounceProps>}
 */
"
`;

exports[`since  1`] = `
"/** @since 3.16.0 */
"
`;

exports[`yields should work like returns tag 1`] = `
"/** @yields   {Number}   Yields description */
"
`;

exports[`yields should work like returns tag 2`] = `
"/** @yields   {Number}   Yields description */
"
`;

exports[`yields should work like returns tag 3`] = `
"/** @yields   {Number} */
"
`;

exports[`yields should work like returns tag 4`] = `
"/** @yields   Yelds description */
"
`;

exports[`yields should work like returns tag 5`] = `
"/** @yields */
"
`;
